src/test/deca/syntax/valid/renduInitial/04var_int.deca
{
    int x = 17;
    print(x);
}
