src/test/deca/syntax/invalid/renduR1/04while_missing_brace.deca
{
    int x = 4;
    while (x == 4) 
        x = 3;
	println("hello error");
    

}
